--- a/p.html
+++ b/p.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-                       <meta charset="UTF-8">
-                       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                       <title>Document</title>
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>Table Tag</title>
 </head>
 <body>
-     <h1>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae commodi molestiae, autem architecto nesciunt earum velit error et consequatur soluta repudiandae pariatur doloribus, inventore, esse aspernatur nisi est praesentium voluptas!</h1>              
+     <table border="">
+          <tr>
+               <th colspan=""></th>
+          </tr>
+     </table>
 </body>
 </html>
