--- a/inline.html/indexexternal.html
+++ b/inline.html/indexexternal.html
@@ -14,7 +14,12 @@
 <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur, possimus ex facilis quos soluta libero omnis, perspiciatis tempore vitae ullam facere laboriosam culpa, alias delectus odit animi vel consequuntur iusto?</h2>
 </div>
 <h2 class="head" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate ipsam deserunt possimus dicta officia quisquam doloribus numquam, alias quidem nostrum quos itaque commodi voluptatem aut, maiores cumque. Enim, sequi excepturi!</h2>
- 
-            
+ <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis voluptatem sed quod dolor reiciendis praesentium explicabo neque, amet est optio quaerat, voluptate suscipit atque odio at ipsum alias dolores cum.</p>
+        
+ <section class="wrapper">
+  <h1>Lorem ipsum dolor sit amet.</h1>
+<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit, recusandae quia sequi nam earum repellendus maiores quod placeat eos aliquid! Unde voluptate quidem qui harum, minus temporibus animi nam dolore!</p>
+
+ </section>
 </body>
 </html>
