--- a/test.html
+++ b/test.html
@@ -16,16 +16,16 @@
  <li><a href="Footer">Footer</a></li>
 </ul>
 <h5 type="u">About Myself</h5>
-<img src="myimg.jpeg" height="200px" alt="girl photo">
-<img src="myimg.jpeg" height="200px" alt="girl photo">
-<img src="myimg.jpeg" height="200px" alt="girl photo">
-<img src="myimg.jpeg" height="200px" alt="girl photo">
+<img src="shi.jpg" height="200px" alt="girl photo">
+<img src="shi.jpg" height="200px" alt="girl photo">
+<img src="shi.jpg" height="200px" alt="girl photo">
+<img src="shi.jpg" height="200px" alt="girl photo">
 <br>
 
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quisquam, explicabo qui sit rem dolorem aspernatur consectetur exercitationem voluptatum ut impedit sequi iste tempora neque necessitatibus dolores. Quam, sint laborum dolores sequi ex quibusdam distinctio sunt, delectus, quae exercitationem optio eveniet perspiciatis minima debitis consectetur et tenetur rerum? Sit, perspiciatis?
 <br><br>
 
-<table border="">
+<table border="" bgcolor="blue" width="900">
  <tr>
 <th colspan="3">My Acadmic Details</th>
  </tr>
@@ -66,6 +66,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Et quisquam, explicabo 
 <input type="email" name="" id="email" placeholder="Enter your email id" required><br><br>
 <input type="submit" name="" id="">
 </form>
+<textarea name="" id="" cols="30" rows="10">Enter</textarea>
 
 <h3>Fly makes you faster</h3>
 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere deleniti quo ratione perferendis maiores, omnis impedit vel possimus neque saepe in iure nihil repudiandae dicta. Vel ad itaque aliquam earum!
