--- a/inline.html/burgercard.html
+++ b/inline.html/burgercard.html
@@ -23,7 +23,9 @@
 <ul>
 <li>Ad ad commodo id excepteur anim</li>
 </ul>
-<button>ABOUT US</button>
+<button>ABOUT US</button><br><br>
+<marquee behavior="" direction="right">FRESH FRESH FRESH</marquee>
+
 </div>
 </section>               
 </body>
