--- a/inline.html/position.html
+++ b/inline.html/position.html
@@ -4,27 +4,14 @@
                        <meta charset="UTF-8">
                        <meta name="viewport" content="width=device-width, initial-scale=1.0">
                        <title>Document</title>
-<link rel="stylesheet" href="nav.css">
 </head>
+<link rel="stylesheet" href="position.css">
 <body>
-<nav class="navbar">
-<h1>Logo</h1>       
-<ul>
-<li>Home</li>
-<li>About</li>
-<li>Contact</li>
-<li>Services</li>
+<section class="wrapper">
+<div class="ch">
 
+</div>
 
-</ul>            
-
-</nav>
-<section class="hero">
-
-</section>
-<section class="panda">
-
-</section>
-
+</section>                     
 </body>
 </html>
