--- a/inline.html/project.html
+++ b/inline.html/project.html
@@ -3,12 +3,16 @@
 <head>
                        <meta charset="UTF-8">
                        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                       <title>Document</title>
+                       <title>Project</title>
 </head>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 <link rel="stylesheet" href="project.css">
 <body>
+                       <i class="fa-solid fa-magnifying-glass"></i>
 <nav class="parent">
 <h1>TANISHQ</h1>
+
 <input type="text" placeholder="Search for Gold jwellery Diamond and more....">
 </nav>    
 <nav class="n2">
@@ -25,7 +29,17 @@
 <li>More</li>
 </ul>
 </nav> 
+<section class="image">
+<img src="jwe.webp" alt="">
+<h1>Best Of Akshaya Tritiya</h1>
+<p>Your must-haves for the season, perfect for everyday</p>
 
+</section>
+<section class="product">
+<div class="d1"><img src="e1.webp" alt=""></div>
+<div class="d2"><img src="e2.webp" alt=""></div>
+
+</section>
 
 </body>
 </html>
