--- a/inline.html/project.html
+++ b/inline.html/project.html
@@ -17,7 +17,10 @@
 </nav>    
 <nav class="n2">
 <ul class="list">
-<li>All jwellery</li>
+<li class="l1">
+All jwellery
+<i class="fa-regular fa-diamonds-4"></i>
+</li>
 <li>Gold</li>
 <li>Diamond</li>
 <li>Earings</li>
