--- a/inline.html/project.html
+++ b/inline.html/project.html
@@ -35,12 +35,44 @@ All jwellery
 <section class="image">
 <img src="jwe.webp" alt="">
 <h1>Best Of Akshaya Tritiya</h1>
-<p>Your must-haves for the season, perfect for everyday</p>
-
+<p class="parah">Your must-haves for the season, perfect for everyday</p>
+</section>
+<section class="cell">
+ <div class="img1">
+<img src="r1.webp" alt="">
+<p id="p1">classic loop gold earings</p>
+<p>51223</p>
+ </div>
+ <div class="img2">
+ <img src="r2.webp" alt="">
+ <p id="p2">timeless refinement ring</p>
+ <p>56838</p>
+ </div>
+ <div class="img3">
+ <img src="r3.webp" alt="">
+ <p id="p3"></p>
+ <p>1k onkar gold pendant</p>
+ <p>86627</p>
+ </div>
+ <div class="img4">
+<img src="r4.webp" alt="">
+<p id="p4"></p>
+<p>sophisticated 22 karal yello</p>
+<p>41290</p>
+ </div>
+</section>
+<section class="cc">
+<h1>TANISHQ Collections</h1>
+<p id="pp1">Explore our newly launched collection </p>
 </section>
 <section class="product">
-<div class="d1"><img src="e1.webp" alt=""></div>
-<div class="d2"><img src="e2.webp" alt=""></div>
+<div class="d1">
+<img src="img1.webp" alt="">
+</div>
+<div class="d2">
+<img src="img2.jpg" alt="">
+<img src="img3.webp" alt="">
+</div>
 
 </section>
 
