--- a/inline.html/project.html
+++ b/inline.html/project.html
@@ -12,6 +12,7 @@
                        <i class="fa-solid fa-magnifying-glass"></i>
 <nav class="parent">
 <h1>TANISHQ</h1>
+<i class="fa-solid fa-magnifying-glass"></i>
 
 <input type="text" placeholder="Search for Gold jwellery Diamond and more....">
 </nav>    
@@ -22,52 +23,65 @@ All jwellery
 <i class="fa-regular fa-diamonds-4"></i>
 </li>
 <li>Gold</li>
-<li>Diamond</li>
+<li>
+<i class="fa-solid fa-gem"></i>
+Diamond
+</li>
 <li>Earings</li>
-<li>Rings</li>
+<li>
+Rings
+</li>
 <li>Daily Wear</li>
 <li>Collections</li>
 <li>Wedding</li>
-<li>Gifting</li>
+<li>
+<i class="fa-solid fa-gift"></i>
+Gifting 
+</li>
 <li>More</li>
 </ul>
 </nav> 
 <section class="image">
-<img src="jwe.webp" alt="">
+<img src="jwe.webp" alt="" width="100%">
 <h1>Best Of Akshaya Tritiya</h1>
 <p class="parah">Your must-haves for the season, perfect for everyday</p>
 </section>
+
 <section class="cell">
- <div class="img1">
+ <div>
 <img src="r1.webp" alt="">
 <p id="p1">classic loop gold earings</p>
-<p>51223</p>
+<p>$51223</p>
  </div>
- <div class="img2">
+
+ <div>
  <img src="r2.webp" alt="">
  <p id="p2">timeless refinement ring</p>
- <p>56838</p>
+ <p>$56838</p>
  </div>
- <div class="img3">
+
+ <div>
  <img src="r3.webp" alt="">
  <p id="p3"></p>
  <p>1k onkar gold pendant</p>
- <p>86627</p>
+ <p>$86627</p>
  </div>
- <div class="img4">
-<img src="r4.webp" alt="">
+
+ <div>
+<img src="n1.webp" alt="">
 <p id="p4"></p>
 <p>sophisticated 22 karal yello</p>
-<p>41290</p>
+<p>$41290</p>
  </div>
 </section>
+
 <section class="cc">
 <h1>TANISHQ Collections</h1>
 <p id="pp1">Explore our newly launched collection </p>
 </section>
 <section class="product">
 <div class="d1">
-<img src="img1.webp" alt="">
+<img src="img1.webp" alt="" width="800px">
 </div>
 <div class="d2">
 <img src="img2.jpg" alt="">
@@ -75,5 +89,40 @@ All jwellery
 </div>
 </section>
 
+<h1 class="f1">Find Your Perfect Match</h1>
+<p class="f2">Shop by Categories</p>
+
+<section class="brand">
+<div class="b1">
+<img src="v1.jpg" alt="" width="400px">
+<p>Rings</p>
+</div>
+<div class="b2">
+<img src="v2.webp" alt="" width="400px">
+<p>Pendants</p>
+</div>
+<div class="b3">
+<img src="v3.jpg" alt="" width="400px">
+<p>Bangles</p>
+</div>
+<div class="b4">
+<img src="e5.webp" alt="" width="400px">
+<p>Breslets</p>
+</div>
+</section>
+
+<section class="brand2">
+<div><img src="ma1.jpg" alt="" width="400px">
+<p>Mangalsutra</p>
+</div>
+<div><img src="ma2.webp" alt="" width="400px">
+<p>Earings</p></div>
+<div><img src="ma4.webp" alt="" width="400px">
+<p>Chains</p>
+</div>
+<div><img src="ma3.webp" alt="" width="400px">
+<p>View All</p>
+</div>
+</section>
 </body>
 </html>
