--- a/inline.html/project.html
+++ b/inline.html/project.html
@@ -6,7 +6,6 @@
                        <title>Project</title>
 </head>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
 <link rel="stylesheet" href="project.css">
 <body>
                        <i class="fa-solid fa-magnifying-glass"></i>
@@ -15,7 +14,12 @@
 <i class="fa-solid fa-magnifying-glass"></i>
 
 <input type="text" placeholder="Search for Gold jwellery Diamond and more....">
-</nav>    
+</nav>
+<label for="">
+<i class="fa-solid fa-bars-staggered"></i>
+
+</label>
+
 <nav class="n2">
 <ul class="list">
 <li class="l1">
@@ -94,33 +98,33 @@ Gifting
 
 <section class="brand">
 <div class="b1">
-<img src="v1.jpg" alt="" width="400px">
+<img src="v1.jpg" alt="" width="300px">
 <p>Rings</p>
 </div>
 <div class="b2">
-<img src="v2.webp" alt="" width="400px">
+<img src="v2.webp" alt="" width="300px">
 <p>Pendants</p>
 </div>
 <div class="b3">
-<img src="v3.jpg" alt="" width="400px">
+<img src="v3.jpg" alt="" width="300px">
 <p>Bangles</p>
 </div>
 <div class="b4">
-<img src="e5.webp" alt="" width="400px">
+<img src="e5.webp" alt="" width="300px">
 <p>Breslets</p>
 </div>
 </section>
 
 <section class="brand2">
-<div><img src="ma1.jpg" alt="" width="400px">
+<div><img src="ma1.jpg" alt="" width="300px">
 <p>Mangalsutra</p>
 </div>
-<div><img src="ma2.webp" alt="" width="400px">
+<div><img src="ma2.webp" alt="" width="300px">
 <p>Earings</p></div>
-<div><img src="ma4.webp" alt="" width="400px">
+<div><img src="ma4.webp" alt="" width="300px">
 <p>Chains</p>
 </div>
-<div><img src="ma3.webp" alt="" width="400px">
+<div><img src="ma3.webp" alt="" width="300px">
 <p>View All</p>
 </div>
 </section>
