--- a/inline.html/project.html
+++ b/inline.html/project.html
@@ -157,7 +157,7 @@
 
 <div id="f2">
 <h1>useful links</h1>
-<ul>
+<ul class="">
 <li>Delivery Information</li>
 <li>International Shipping</li>
 <li>Payment Options</li>
