--- a/inline.html/project.html
+++ b/inline.html/project.html
@@ -9,7 +9,7 @@
 </head>
 <body>
  
-
+<section class="kuki">
  <nav class="parent">
  <h1>TANISHQ</h1>
  <input type="text" placeholder="Search for Gold jwellery Diamond and more....">
@@ -40,6 +40,7 @@
 <li><a href="">More</a></li>
 </ul>
 </nav> 
+</section>
                        
 
  
@@ -81,12 +82,16 @@
 
 
 <section class="product">
+
 <div class="d1">
-<img src="img1.webp" alt="tanishq collection img" width="800px">
+ <img src="img1.webp" height="600px" alt="tanishq collection img">
 </div>
+
 <div class="d2">
-<img src="img2.jpg" alt="many option img">
-<img src="img3.webp" alt="many option img">
+ <img src="img3.webp" height="300px" alt="many option img">
+ <div>
+<img src="img2.jpg" height="300px" alt="many option img">
+</div>
 </div>
 </section>
 
