--- a/inline.html/project.html
+++ b/inline.html/project.html
@@ -10,9 +10,15 @@
 <body>
  
 <section class="kuki">
+<div class="hh1"><i class="fa-solid fa-truck"></i>
+ Akshaya Tritiya Offer is Live – Up to 20% Off*
+<i class="fa-solid fa-truck"></i>
+</div>
  <nav class="parent">
  <h1>TANISHQ</h1>
- <input type="text" placeholder="Search for Gold jwellery Diamond and more....">
+ <input type="text" placeholder="Search for Gold jwellery Diamond and more...." > 
+ <i class="fa-solid fa-magnifying-glass"></i>
+ <i class="fa-solid fa-gem"></i>
  </nav>
 
  <nav class="n2">
@@ -64,16 +70,14 @@
  <div>
  <img src="r3.webp" alt="">
  <p id="p3">1k onkar gold pendant <br>$86627</p>
- 
- 
  </div>
 
- <div>
-<img src="n1.webp" alt="">
-<p id="p4">sophisticated 22 karal yello <br>$41290</p>
+
+<div>
+<img src="r4.webp" alt="">
+<p id="p4">Understated Elegance Bracelet <br>$75492</p>
 </div>
 </section>
-
 
 <section class="cc">
 <h1>TANISHQ Collections</h1>
@@ -140,6 +144,7 @@
 
  <h1 class="t">TANISHQ WORLD</h1>
  <p>A companion for every occasion</p>
+
 <section class="tw1">
 <div>
 <img src="tw1.webp" alt="wedding">
@@ -154,10 +159,17 @@
 <img src="tw4.webp" alt="">
 </section>
 
+
 <div class="footer">
 <div id="f1">
-<h1>download the tanishq app now</h1>
-<img src="tscanner.webp" alt="tanishq scanner" width="270px">
+<h1 class="r">TANISHQ</h1>
+
+<p id="fp">Download the Tanishq App Now</p>
+<img src="tscanner.webp" alt="tanishq scanner" width="160px">
+<div class="dd">
+<div class="div1">Download on the <br>Play Store</div>
+<div class="div2">Download on the <br>App Store</div>
+</div>
 </div>
 
 <div id="f2">
@@ -170,6 +182,15 @@
 <li>Returns</li>
 <li>Find a Store</li>
 </ul>
+<h1 class="pg">Social 
+<i class="fa-brands fa-instagram"></i>
+<i class="fa-brands fa-facebook"></i>
+<i class="fa-brands fa-youtube"></i></h1>
+<i class="fa-brands fa-cc-visa"></i>
+<i class="fa-brands fa-cc-paypal"></i>
+<i class="fa-brands fa-cc-diners-club"></i>
+2025 Titan Company Limited. All Rights Reserved
+
 </div>
 
 <div id="f3">
@@ -178,13 +199,20 @@
 <p>Offers & Contest Details</p>
 <p>Help & FAQs</p>
 <p>About Tanishq</p>
+
 </div>
 
 <div id="f4">
 <h1>Contact Us</h1>
 <p>1800-266-0123</p>
 <h1>Chat With Us</h1>
-<p>+91 8147349242</p>
+<p id="p1">+91 8147349242</p>
+<i class="fa-brands fa-whatsapp"></i>
+<i class="fa-solid fa-envelope"></i>
+<i class="fa-solid fa-message"></i>
+<p id="a">Terms & Conditions</p>
+<p id="a">Privacy Policy</p>
+<p id="a">Disclaimer</p>
 </div>
 
 
