--- a/inline.html/project.html
+++ b/inline.html/project.html
@@ -10,9 +10,9 @@
 <body>
  
 <section class="kuki">
-<div class="hh1"><i class="fa-solid fa-truck"></i>
+<div class="hh1"><marquee behavior="" direction="right"><i class="fa-solid fa-truck"></i>
  Akshaya Tritiya Offer is Live – Up to 20% Off*
-<i class="fa-solid fa-truck"></i>
+<i class="fa-solid fa-truck"></i></marquee>
 </div>
  <nav class="parent">
  <h1>TANISHQ</h1>
